feat: mount paymail profile lookup; docs
